employer sharing applications journey pages put together

--- a/app/views/v13/_summary.html
+++ b/app/views/v13/_summary.html
@@ -58,10 +58,10 @@
       </div>
 
 
-      <!-- <details class="govuk-details" data-module="govuk-details">
+      <details class="govuk-details" data-module="govuk-details">
         <summary class="govuk-details__summary">
           <span class="govuk-details__summary-text">
-            What we've done this sprint
+            What we've done 
           </span>
         </summary>
         <div class="govuk-details__text">
@@ -69,27 +69,33 @@
             <thead class='govuk-table__head'>
               <tr class='govuk-table__row'>
                 <th scope='col' class='govuk-table__header'>Page</th>
-                <th scope='col' class='govuk-table__header'>What we've done this sprint</th>
+                <th scope='col' class='govuk-table__header'>What we've done</th>
               </tr>
             </thead>
             <tbody class='govuk-table__body'>
               <tr class='govuk-table__row'>
-                <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v9/employer/view-advert/3c-dates">Edit advert dates</a></td>
+                <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v13/employer/email-shared-applications">Email to employer</a></td>
                 <td class='govuk-table__cell'>
-                  <li>CHANGED the journey to edit dates - live advert</li>
+                  <li>NEW email send to employer what applications have been shared for them to review</li>
                 </td>
               </tr>
               <tr class='govuk-table__row'>
-                <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v9/employer/view-advert/3b-manage-advert-edited">Manage advert</a></td>
+                <td class='govuk-table__cell'><a class="govuk-link govuk-link--no-visited-state" href="/v13/employer/home">Homepage tasks bar</a></td>
                 <td class='govuk-table__cell'>
-                  <li>CHANGED to GDS style success notification banner - live advert</li>
-                  <li>CHANGED 'Edit advert' link to 'Edit advert dates' - liver advert</li>
+                  <li>ADDED notification to tasks bar</li>
+                </td>
+              </tr>
+              <tr class='govuk-table__row'>
+                <td class='govuk-table__cell'>UR version testing of dashboard</a></td>
+                <td class='govuk-table__cell'>
+                  <li><a class="govuk-link govuk-link--no-visited-state" href="/v13/employer/view/0-dashboard">ADDED new tile</a></li>
+                  <li><a class="govuk-link govuk-link--no-visited-state" href="/v13/employer/view/0-dashboard-v3">ADDED banner</a></li>
                 </td>
               </tr>
             </tbody>
           </table> 
         </div>
-      </details> -->
+      </details>
 
 
 
@@ -101,16 +107,16 @@
         <a href="/{{version}}/provider/login" class="govuk-button" style="background:#F47737" data-module="govuk-button">View journey</a> 
       </div>
 
-      <!-- <details class="govuk-details" data-module="govuk-details">
+      <details class="govuk-details" data-module="govuk-details">
         <summary class="govuk-details__summary">
           <span class="govuk-details__summary-text">
-            What we've done this sprint
+            What we've done 
           </span>
         </summary>
         <div class="govuk-details__text">
           <table class='govuk-table'>                    
             <thead class='govuk-table__head'>
-              <tr class='govuk-table__row'>
+              <!-- <tr class='govuk-table__row'>
                 <th scope='col' class='govuk-table__header'>Page</th>
                 <th scope='col' class='govuk-table__header'>What we've done this sprint</th>
               </tr>
@@ -141,11 +147,11 @@
                 <td class='govuk-table__cell'>
                   <li>ADDED new page to confirm organisation</li>
                 </td>
-              </tr>
+              </tr> -->
             </tbody>
           </table> 
         </div>
-      </details> -->
+      </details>
 
 
 <!-- ////TRAINEESHIP -->
@@ -155,16 +161,16 @@
         <a href="/{{version}}/provider/login" class="govuk-button" style="background: #417F82" data-module="govuk-button">View journey</a>
       </div>
 
-      <!-- <details class="govuk-details" data-module="govuk-details">
+      <details class="govuk-details" data-module="govuk-details">
         <summary class="govuk-details__summary">
           <span class="govuk-details__summary-text">
-            What we've done this sprint
+            What we've done
           </span>
         </summary>
         <div class="govuk-details__text">
           <table class='govuk-table'>                    
             <thead class='govuk-table__head'>
-              <tr class='govuk-table__row'>
+              <!-- <tr class='govuk-table__row'>
                 <th scope='col' class='govuk-table__header'>Page</th>
                 <th scope='col' class='govuk-table__header'>What we've done this sprint</th>
               </tr>
@@ -195,11 +201,11 @@
                 <td class='govuk-table__cell'>
                   <li>ADDED new page to confirm organisation</li>
                 </td>
-              </tr>
+              </tr> -->
             </tbody>
           </table> 
         </div>
-      </details> -->
+      </details>
                                      
 
 
