--- a/app/views/v13/employer/view/0-dashboard.html
+++ b/app/views/v13/employer/view/0-dashboard.html
@@ -195,6 +195,7 @@ Your apprentice adverts - Manage apprenticeships - GOV.UK
       </div>
     </div>
         <div class="govuk-grid-row das-card--row">
+
       <div class="govuk-grid-column-one-third">
         <div class="das-card">
           <div class="das-card--content">
@@ -205,6 +206,20 @@ Your apprentice adverts - Manage apprenticeships - GOV.UK
               </a>
             </h3>
             <p class="govuk-body das-card--description">Adverts that have passed the closing date. You can clone these adverts to republish them.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="govuk-grid-column-one-third">
+        <div class="das-card">
+          <div class="das-card--content">
+            <h3 class="govuk-heading-m das-card--heading">
+              <span class="das-card--stat">2</span>
+              <a class="card-link" href="6-shared">
+                Review shared applications
+              </a>
+            </h3>
+            <p class="govuk-body das-card--description">Review applications shared with you by a training provider</p>
           </div>
         </div>
       </div>
