--- a/app/views/v13/employer/view/6b-shared-applications-yes.html
+++ b/app/views/v13/employer/view/6b-shared-applications-yes.html
@@ -31,29 +31,161 @@ Adverts
     <span class="govuk-caption-l">Entry Level Development Engineer Apprentice</span>
     <h1 class="govuk-heading-l">Shared applications</h1>
 
-<table class="govuk-table das-table--responsive">           
-  <thead class="govuk-table__head govuk-body-s">
-      <tr>
-          <th scope="col" class="govuk-table__header">Application ID</th>
-          <th scope="col" class="govuk-table__header">Reviewed</th>
-          <th scope="col" class="govuk-table__header">Response</th>
-
-      </tr>
-  </thead>
-  <tbody class="govuk-table__body">
-          <tr class="govuk-table__row govuk-body-s">
-            <td class="govuk-table__cell"><a href="../account/application-shared">87967BE</a></td>
-              <td class="govuk-table__cell"><span id='date'></span></td>
-              <td class="govuk-table__cell"> Yes, I want to interview </td>
+    <table class="govuk-table das-table--responsive">           
+      <thead class="govuk-table__head govuk-body-s">
+          <tr>
+              <th scope="col" class="govuk-table__header">Application ID</th>
+              <th scope="col" class="govuk-table__header">Reviewed</th>
+              <th scope="col" class="govuk-table__header">Response</th>
+    
           </tr>
-
-          <tr class="govuk-table__row govuk-body-s">
-            <td class="govuk-table__cell"><a href="#">B19D31F</a></td>
-              <td class="govuk-table__cell">-</td>
-              <td class="govuk-table__cell"> - </td>
-          </tr>
-  </tbody>
-</table>
+      </thead>
+    <tbody class="govuk-table__body">
+    <tr class="govuk-table__row govuk-body-s">
+    <td class="govuk-table__cell"><a href="../account/application-shared">87967BE</a></td>
+    <td class="govuk-table__cell">Not reviewed</td>
+    <td class="govuk-table__cell">               
+    <strong class="govuk-tag govuk-tag--blue">
+    Response needed
+    </strong> </td> 
+    </tr>
+    
+    <tr class="govuk-table__row govuk-body-s">
+    <td class="govuk-table__cell"><a href="../account/application-shared">B19D31F</a></td>
+    <td class="govuk-table__cell">Not reviewed</td>
+    <td class="govuk-table__cell">               
+    <strong class="govuk-tag govuk-tag--blue">
+    Response needed
+    </strong> </td> 
+    </tr>
+    
+    <tr class="govuk-table__row govuk-body-s">
+    <td class="govuk-table__cell"><a href="../account/application-shared">B19D31F</a></td>
+    <td class="govuk-table__cell">Not reviewed</td>
+    <td class="govuk-table__cell">               
+    <strong class="govuk-tag govuk-tag--blue">
+    Response needed
+    </strong> </td> 
+    </tr>
+    
+    <tr class="govuk-table__row govuk-body-s">
+    <td class="govuk-table__cell"><a href="../account/application-shared">B19D31F</a></td>
+    <td class="govuk-table__cell">Not reviewed</td>
+    <td class="govuk-table__cell">               
+    <strong class="govuk-tag govuk-tag--blue">
+    Response needed
+    </strong> </td> 
+    </tr>
+    
+    <tr class="govuk-table__row govuk-body-s">
+    <td class="govuk-table__cell"><a href="../account/application-shared">B19D31F</a></td>
+    <td class="govuk-table__cell">Not reviewed</td>
+    <td class="govuk-table__cell">               
+    <strong class="govuk-tag govuk-tag--blue">
+    Response needed
+    </strong> </td> 
+    </tr>
+    
+    <tr class="govuk-table__row govuk-body-s">
+    <td class="govuk-table__cell"><a href="../account/application-shared">B19D31F</a></td>
+    <td class="govuk-table__cell">Not reviewed</td>
+    <td class="govuk-table__cell">               
+    <strong class="govuk-tag govuk-tag--blue">
+    Response needed
+    </strong> </td> 
+    </tr>
+    
+    <tr class="govuk-table__row govuk-body-s">
+    <td class="govuk-table__cell"><a href="../account/application-shared">B19D31F</a></td>
+    <td class="govuk-table__cell">Not reviewed</td>
+    <td class="govuk-table__cell">               
+    <strong class="govuk-tag govuk-tag--blue">
+    Response needed
+    </strong> </td> 
+    </tr>
+    
+    <tr class="govuk-table__row govuk-body-s">
+    <td class="govuk-table__cell"><a href="../account/application-shared">B19D31F</a></td>
+    <td class="govuk-table__cell">Not reviewed</td>
+    <td class="govuk-table__cell">               
+    <strong class="govuk-tag govuk-tag--blue">
+    Response needed
+    </strong> </td> 
+    </tr>
+    
+    <tr class="govuk-table__row govuk-body-s">
+    <td class="govuk-table__cell"><a href="../account/application-shared">B19D31F</a></td>
+    <td class="govuk-table__cell">Not reviewed</td>
+    <td class="govuk-table__cell">               
+    <strong class="govuk-tag govuk-tag--blue">
+    Response needed
+    </strong> </td> 
+    </tr>
+    
+    <tr class="govuk-table__row govuk-body-s">
+    <td class="govuk-table__cell"><a href="../account/application-shared">B19D31F</a></td>
+    <td class="govuk-table__cell">Not reviewed</td>
+    <td class="govuk-table__cell">               
+    <strong class="govuk-tag govuk-tag--blue">
+    Response needed
+    </strong> </td> 
+    </tr>
+    
+    <tr class="govuk-table__row govuk-body-s">
+    <td class="govuk-table__cell"><a href="../account/application-shared-yes">87967BE</a></td>
+    <td class="govuk-table__cell"><span id='date'></span></td>
+    <td class="govuk-table__cell">               
+    <strong class="govuk-tag govuk-tag--green">
+    Interviewing
+    </strong> </td> 
+    </tr>
+    
+    <tr class="govuk-table__row govuk-body-s">
+    <td class="govuk-table__cell"><a href="../account/application-shared-no">B19D31F</a></td>
+    <td class="govuk-table__cell">28 Oct 2022</td>
+    <td class="govuk-table__cell">         
+    <strong class="govuk-tag govuk-tag--red">
+    Unsuccessful
+    </strong> </td>
+    </tr>
+    <tr class="govuk-table__row govuk-body-s">
+    <td class="govuk-table__cell"><a href="../account/application-shared-yes">87967BE</a></td>
+    <td class="govuk-table__cell">27 Oct 2022</td>
+    <td class="govuk-table__cell">               
+    <strong class="govuk-tag govuk-tag--green">
+    Interviewing
+    </strong> </td> </td> 
+    </tr>
+    
+    <tr class="govuk-table__row govuk-body-s">
+    <td class="govuk-table__cell"><a href="../account/application-shared-yes">B19D31F</a></td>
+    <td class="govuk-table__cell">27 Oct 2022</td>
+    <td class="govuk-table__cell">               
+    <strong class="govuk-tag govuk-tag--green">
+    Interviewing
+    </strong> </td> 
+    </tr>
+    
+    <tr class="govuk-table__row govuk-body-s">
+    <td class="govuk-table__cell"><a href="../account/application-shared-yes">87967BE</a></td>
+    <td class="govuk-table__cell">27 Oct 2022</td>
+    <td class="govuk-table__cell">               
+    <strong class="govuk-tag govuk-tag--green">
+    Interviewing
+    </strong> </td> 
+    </tr>
+    
+    <tr class="govuk-table__row govuk-body-s">
+    <td class="govuk-table__cell"><a href="../account/application-shared-yes">B19D31F</a></td>
+    <td class="govuk-table__cell">26 Oct 2022</td>
+    <td class="govuk-table__cell">               
+    <strong class="govuk-tag govuk-tag--green">
+    Interviewing
+    </strong> </td> 
+    </tr>
+              
+      </tbody>
+    </table>
 
 </div>
 </div>
