--- a/app/views/v13/employer/view/6b-shared-applications.html
+++ b/app/views/v13/employer/view/6b-shared-applications.html
@@ -28,250 +28,145 @@ Adverts
   </thead>
 <tbody class="govuk-table__body">
 <tr class="govuk-table__row govuk-body-s">
-<td class="govuk-table__cell"><a href="#">B19D31F</a></td>
-<td class="govuk-table__cell">Not reviewed</td>
-<td class="govuk-table__cell">               
-<strong class="govuk-tag govuk-tag--blue">
-Response needed
-</strong> </td> 
-</tr>
-
-<tr class="govuk-table__row govuk-body-s">
-<td class="govuk-table__cell"><a href="#">B19D31F</a></td>
-<td class="govuk-table__cell">Not reviewed</td>
-<td class="govuk-table__cell">               
-<strong class="govuk-tag govuk-tag--blue">
-Response needed
-</strong> </td> 
-</tr>
-
-<tr class="govuk-table__row govuk-body-s">
-<td class="govuk-table__cell"><a href="#">B19D31F</a></td>
-<td class="govuk-table__cell">Not reviewed</td>
-<td class="govuk-table__cell">               
-<strong class="govuk-tag govuk-tag--blue">
-Response needed
-</strong> </td> 
-</tr>
-
-<tr class="govuk-table__row govuk-body-s">
-<td class="govuk-table__cell"><a href="#">B19D31F</a></td>
-<td class="govuk-table__cell">Not reviewed</td>
-<td class="govuk-table__cell">               
-<strong class="govuk-tag govuk-tag--blue">
-Response needed
-</strong> </td> 
-</tr>
-
-<tr class="govuk-table__row govuk-body-s">
-<td class="govuk-table__cell"><a href="#">B19D31F</a></td>
-<td class="govuk-table__cell">Not reviewed</td>
-<td class="govuk-table__cell">               
-<strong class="govuk-tag govuk-tag--blue">
-Response needed
-</strong> </td> 
-</tr>
-
-<tr class="govuk-table__row govuk-body-s">
-<td class="govuk-table__cell"><a href="#">B19D31F</a></td>
-<td class="govuk-table__cell">Not reviewed</td>
-<td class="govuk-table__cell">               
-<strong class="govuk-tag govuk-tag--blue">
-Response needed
-</strong> </td> 
-</tr>
-
-<tr class="govuk-table__row govuk-body-s">
-<td class="govuk-table__cell"><a href="#">B19D31F</a></td>
-<td class="govuk-table__cell">Not reviewed</td>
-<td class="govuk-table__cell">               
-<strong class="govuk-tag govuk-tag--blue">
-Response needed
-</strong> </td> 
-</tr>
-
-<tr class="govuk-table__row govuk-body-s">
-<td class="govuk-table__cell"><a href="#">B19D31F</a></td>
-<td class="govuk-table__cell">Not reviewed</td>
-<td class="govuk-table__cell">               
-<strong class="govuk-tag govuk-tag--blue">
-Response needed
-</strong> </td> 
-</tr>
-
-<tr class="govuk-table__row govuk-body-s">
-<td class="govuk-table__cell"><a href="#">B19D31F</a></td>
-<td class="govuk-table__cell">Not reviewed</td>
-<td class="govuk-table__cell">               
-<strong class="govuk-tag govuk-tag--blue">
-Response needed
-</strong> </td> 
-</tr>
-
-<tr class="govuk-table__row govuk-body-s">
-<td class="govuk-table__cell"><a href="#">B19D31F</a></td>
-<td class="govuk-table__cell">Not reviewed</td>
-<td class="govuk-table__cell">               
-<strong class="govuk-tag govuk-tag--blue">
-Response needed
-</strong> </td> 
-</tr>
-
-<tr class="govuk-table__row govuk-body-s">
-<td class="govuk-table__cell"><a href="#">B19D31F</a></td>
-<td class="govuk-table__cell">Not reviewed</td>
-<td class="govuk-table__cell">               
-<strong class="govuk-tag govuk-tag--blue">
-Response needed
-</strong> </td> 
-</tr>
-
-<tr class="govuk-table__row govuk-body-s">
-<td class="govuk-table__cell"><a href="#">B19D31F</a></td>
-<td class="govuk-table__cell">Not reviewed</td>
-<td class="govuk-table__cell">               
-<strong class="govuk-tag govuk-tag--blue">
-Response needed
-</strong> </td> 
-</tr>
-
-<tr class="govuk-table__row govuk-body-s">
-<td class="govuk-table__cell"><a href="#">B19D31F</a></td>
-<td class="govuk-table__cell">Not reviewed</td>
-<td class="govuk-table__cell">               
-<strong class="govuk-tag govuk-tag--blue">
-Response needed
-</strong> </td> 
-</tr>
-
-<tr class="govuk-table__row govuk-body-s">
-<td class="govuk-table__cell"><a href="#">B19D31F</a></td>
-<td class="govuk-table__cell">Not reviewed</td>
-<td class="govuk-table__cell">               
-<strong class="govuk-tag govuk-tag--blue">
-Response needed
-</strong> </td> 
-</tr>
-
-<tr class="govuk-table__row govuk-body-s">
-<td class="govuk-table__cell"><a href="#">B19D31F</a></td>
-<td class="govuk-table__cell">Not reviewed</td>
-<td class="govuk-table__cell">               
-<strong class="govuk-tag govuk-tag--blue">
-Response needed
-</strong> </td> 
-</tr>
-<tr class="govuk-table__row govuk-body-s">
-<td class="govuk-table__cell"><a href="#">B19D31F</a></td>
-<td class="govuk-table__cell">Not reviewed</td>
-<td class="govuk-table__cell">               
-<strong class="govuk-tag govuk-tag--blue">
-Response needed
-</strong> </td> 
-</tr>
-<tr class="govuk-table__row govuk-body-s">
-<td class="govuk-table__cell"><a href="#">B19D31F</a></td>
-<td class="govuk-table__cell">Not reviewed</td>
-<td class="govuk-table__cell">               
-<strong class="govuk-tag govuk-tag--blue">
-Response needed
-</strong> </td> 
-</tr>
-<tr class="govuk-table__row govuk-body-s">
-<td class="govuk-table__cell"><a href="#">B19D31F</a></td>
-<td class="govuk-table__cell">Not reviewed</td>
-<td class="govuk-table__cell">               
-<strong class="govuk-tag govuk-tag--blue">
-Response needed
-</strong> </td> 
-</tr>
-
-
-<tr class="govuk-table__row govuk-body-s">
-<td class="govuk-table__cell"><a href="#">B19D31F</a></td>
-<td class="govuk-table__cell">Not reviewed</td>
-<td class="govuk-table__cell">               
-<strong class="govuk-tag govuk-tag--blue">
-Response needed
-</strong> </td> 
-</tr>
-
-<tr class="govuk-table__row govuk-body-s">
-<td class="govuk-table__cell"><a href="#">B19D31F</a></td>
-<td class="govuk-table__cell">Not reviewed</td>
-<td class="govuk-table__cell">               
-<strong class="govuk-tag govuk-tag--blue">
-Response needed
-</strong> </td> 
-</tr>
-<tr class="govuk-table__row govuk-body-s">
-<td class="govuk-table__cell"><a href="#">B19D31F</a></td>
-<td class="govuk-table__cell">Not reviewed</td>
-<td class="govuk-table__cell">               
-<strong class="govuk-tag govuk-tag--blue">
-Response needed
-</strong> </td> 
-</tr>
-
-<tr class="govuk-table__row govuk-body-s">
-<td class="govuk-table__cell"><a href="#">B19D31F</a></td>
-<td class="govuk-table__cell">Not reviewed</td>
-<td class="govuk-table__cell">               
-<strong class="govuk-tag govuk-tag--blue">
-Response needed
-</strong> </td> 
-</tr>
-
-<tr class="govuk-table__row govuk-body-s">
 <td class="govuk-table__cell"><a href="../account/application-shared">87967BE</a></td>
+<td class="govuk-table__cell">Not reviewed</td>
+<td class="govuk-table__cell">               
+<strong class="govuk-tag govuk-tag--blue">
+Response needed
+</strong> </td> 
+</tr>
+
+<tr class="govuk-table__row govuk-body-s">
+<td class="govuk-table__cell"><a href="../account/application-shared">B19D31F</a></td>
+<td class="govuk-table__cell">Not reviewed</td>
+<td class="govuk-table__cell">               
+<strong class="govuk-tag govuk-tag--blue">
+Response needed
+</strong> </td> 
+</tr>
+
+<tr class="govuk-table__row govuk-body-s">
+<td class="govuk-table__cell"><a href="../account/application-shared">B19D31F</a></td>
+<td class="govuk-table__cell">Not reviewed</td>
+<td class="govuk-table__cell">               
+<strong class="govuk-tag govuk-tag--blue">
+Response needed
+</strong> </td> 
+</tr>
+
+<tr class="govuk-table__row govuk-body-s">
+<td class="govuk-table__cell"><a href="../account/application-shared">B19D31F</a></td>
+<td class="govuk-table__cell">Not reviewed</td>
+<td class="govuk-table__cell">               
+<strong class="govuk-tag govuk-tag--blue">
+Response needed
+</strong> </td> 
+</tr>
+
+<tr class="govuk-table__row govuk-body-s">
+<td class="govuk-table__cell"><a href="../account/application-shared">B19D31F</a></td>
+<td class="govuk-table__cell">Not reviewed</td>
+<td class="govuk-table__cell">               
+<strong class="govuk-tag govuk-tag--blue">
+Response needed
+</strong> </td> 
+</tr>
+
+<tr class="govuk-table__row govuk-body-s">
+<td class="govuk-table__cell"><a href="../account/application-shared">B19D31F</a></td>
+<td class="govuk-table__cell">Not reviewed</td>
+<td class="govuk-table__cell">               
+<strong class="govuk-tag govuk-tag--blue">
+Response needed
+</strong> </td> 
+</tr>
+
+<tr class="govuk-table__row govuk-body-s">
+<td class="govuk-table__cell"><a href="../account/application-shared">B19D31F</a></td>
+<td class="govuk-table__cell">Not reviewed</td>
+<td class="govuk-table__cell">               
+<strong class="govuk-tag govuk-tag--blue">
+Response needed
+</strong> </td> 
+</tr>
+
+<tr class="govuk-table__row govuk-body-s">
+<td class="govuk-table__cell"><a href="../account/application-shared">B19D31F</a></td>
+<td class="govuk-table__cell">Not reviewed</td>
+<td class="govuk-table__cell">               
+<strong class="govuk-tag govuk-tag--blue">
+Response needed
+</strong> </td> 
+</tr>
+
+<tr class="govuk-table__row govuk-body-s">
+<td class="govuk-table__cell"><a href="../account/application-shared">B19D31F</a></td>
+<td class="govuk-table__cell">Not reviewed</td>
+<td class="govuk-table__cell">               
+<strong class="govuk-tag govuk-tag--blue">
+Response needed
+</strong> </td> 
+</tr>
+
+<tr class="govuk-table__row govuk-body-s">
+<td class="govuk-table__cell"><a href="../account/application-shared">B19D31F</a></td>
+<td class="govuk-table__cell">Not reviewed</td>
+<td class="govuk-table__cell">               
+<strong class="govuk-tag govuk-tag--blue">
+Response needed
+</strong> </td> 
+</tr>
+
+<tr class="govuk-table__row govuk-body-s">
+<td class="govuk-table__cell"><a href="../account/application-shared-yes">87967BE</a></td>
 <td class="govuk-table__cell">28 Oct 2022</td>
 <td class="govuk-table__cell">               
 <strong class="govuk-tag govuk-tag--green">
-Yes interviewing
+Interviewing
 </strong> </td> 
 </tr>
 
 <tr class="govuk-table__row govuk-body-s">
-<td class="govuk-table__cell"><a href="#">B19D31F</a></td>
+<td class="govuk-table__cell"><a href="../account/application-shared-yes">B19D31F</a></td>
 <td class="govuk-table__cell">28 Oct 2022</td>
 <td class="govuk-table__cell">         
 <strong class="govuk-tag govuk-tag--red">
-Not interviewing
+Unsuccessful
 </strong> </td>
 </tr>
 <tr class="govuk-table__row govuk-body-s">
-<td class="govuk-table__cell"><a href="../account/application-shared">87967BE</a></td>
+<td class="govuk-table__cell"><a href="../account/application-shared-yes">87967BE</a></td>
 <td class="govuk-table__cell">27 Oct 2022</td>
 <td class="govuk-table__cell">               
 <strong class="govuk-tag govuk-tag--green">
-Yes interviewing
+Interviewing
 </strong> </td> </td> 
 </tr>
 
 <tr class="govuk-table__row govuk-body-s">
-<td class="govuk-table__cell"><a href="#">B19D31F</a></td>
+<td class="govuk-table__cell"><a href="../account/application-shared-yes">B19D31F</a></td>
 <td class="govuk-table__cell">27 Oct 2022</td>
 <td class="govuk-table__cell">               
 <strong class="govuk-tag govuk-tag--green">
-Yes interviewing
+Interviewing
 </strong> </td> 
 </tr>
 
 <tr class="govuk-table__row govuk-body-s">
-<td class="govuk-table__cell"><a href="../account/application-shared">87967BE</a></td>
+<td class="govuk-table__cell"><a href="../account/application-shared-yes">87967BE</a></td>
 <td class="govuk-table__cell">27 Oct 2022</td>
 <td class="govuk-table__cell">               
 <strong class="govuk-tag govuk-tag--green">
-Yes interviewing
+Interviewing
 </strong> </td> 
 </tr>
 
 <tr class="govuk-table__row govuk-body-s">
-<td class="govuk-table__cell"><a href="#">B19D31F</a></td>
+<td class="govuk-table__cell"><a href="../account/application-shared-yes">B19D31F</a></td>
 <td class="govuk-table__cell">26 Oct 2022</td>
 <td class="govuk-table__cell">               
 <strong class="govuk-tag govuk-tag--green">
-Yes interviewing
+Interviewing
 </strong> </td> 
 </tr>
           
