--- a/app/views/v13/guidance/get-started.html
+++ b/app/views/v13/guidance/get-started.html
@@ -52,7 +52,7 @@ Get started - Apprenticeship services - GOV.UK
     <p class="govuk-body">
       If you are not working with a training provider or employer, you can use the Display adverts API. You’ll need someone with technical knowledge to connect your system with the API.      
       <br><br>
-      You will need to <a href="register" class="govuk-link govuk-link--no-visited-state">create an account or log in</a>to access the Display adverts API key.
+      You will need to <a href="register" class="govuk-link govuk-link--no-visited-state">create an account or sign in</a>to access the Display adverts API key.
     </p>
 
     <!-- <button class="govuk-button" data-module="govuk-button">
