updated employer shared applications page

--- a/app/views/v13/employer/account/application-shared-no.html
+++ b/app/views/v13/employer/account/application-shared-no.html
@@ -16,7 +16,7 @@ Manage apprentices
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <section>
-      <h1 class="govuk-heading-xl">Application ID: 87967BE</h1>
+      <h1 class="govuk-heading-xl">Application ID: C5662EA</h1>
 
 
       <!-- <div class="panel panel-border-narrow">
@@ -30,43 +30,45 @@ Manage apprentices
       </div> -->
     </section>
 
+<!-- ABOUT YOU -->
     <section>
       <h2 class="govuk-heading-l">About you</h2>
 
       <div class="govuk-form-group">
         <span class="govuk-label govuk-!-font-weight-bold">What are your main strengths?</span>
-        <span>fdfghm</span>
+        <span>xxxxxxxxxx</span>
       </div>
       <div class="govuk-form-group">
         <span class="govuk-label govuk-!-font-weight-bold">What skills would you like to improve during this apprenticeship?</span>
-        <span>fgrszfh</span>
+        <span>xxxxxxxxxx</span>
       </div>
       <div class="govuk-form-group">
         <span class="govuk-label govuk-!-font-weight-bold">What are your hobbies and interests?</span>
-        <span>erheraherth</span>
+        <span>xxxxxxxxxx</span>
       </div>
     </section>
 
     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
+<!-- EDUCATION -->
     <section>
       <h2 class="govuk-heading-l">Education</h2>
 
       <h3 class="govuk-heading-s">Name of most recent school/college</h3>
-      <p>etone</p>
+      <p>xxxxxxxxxx</p>
 
       <h3 class="govuk-heading-s">Years attended</h3>
       <table>
         <thead>
           <tr>
-            <th>Started</th>
+            <th>Started &nbsp;</th>
             <th>Finished</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td>2009</td>
-            <td>2019</td>
+            <td>2016</td>
+            <td>2021</td>
           </tr>
         </tbody>
       </table>
@@ -74,35 +76,35 @@ Manage apprentices
 
     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
+<!-- QUALIFICATIONS -->
     <section>
       <h2 class="govuk-heading-l">Qualifications</h2>
-
-      <p>I don't have any qualifications</p>
-
+      <p>xxxxxxxxxx</p>
     </section>
 
+    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
+<!-- WORK EXPERIENCE -->
     <section>
       <h2 class="govuk-heading-l">Work experience</h2>
-
-      <p>I don't have any work experience</p>
-
+      <p>xxxxxxxxxx</p>
     </section>
 
+    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
+<!-- TRAINING COURSES -->
     <section>
       <h2 class="govuk-heading-l">Training courses</h2>
-
-      <p>I have not been on any training courses</p>
-
-
+      <p>xxxxxxxxxx</p>
     </section>
 
+    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
+<!-- SKILLS -->
     <section>
       <h2 class="govuk-heading-l">Skills the Employer wants</h2>
-
-
-
       <p>
-        Communication skills
+        xxxxxxxxxx
       </p>
     </section>
 
@@ -113,10 +115,10 @@ Manage apprentices
   <h2 class="govuk-heading-l">Additional questions</h2>
 
   <h3 class="govuk-heading-s">Why are you interested in this role?</h3>
-  <p>[applicant answer]</p>
+  <p>xxxxxxxxxx</p>
 
   <h3 class="govuk-heading-s">Are you able to travel to multiple sites?</h3>
-  <p>Yes</p>
+  <p>xxxxxxxxxx</p>
 
 </section>
 
@@ -127,7 +129,7 @@ Manage apprentices
   <h2 class="govuk-heading-l">Equality questions</h2>
 
   <h3 class="govuk-heading-s">Do you have a learning difficulty, disability or health problem?</h3>
-  <p>No</p>
+  <p>Yes</p>
 
   <h3 class="govuk-heading-s">Is there anything we can do to support your interview?</h3>
   <p>
@@ -139,9 +141,8 @@ Manage apprentices
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
     </section>
 
+<!-- RESPOND -->
     <section>
-
-
       <h2 class="govuk-heading-l">
         Your response to the training provider
       </h2>
@@ -154,11 +155,6 @@ Manage apprentices
         text: "[reason given]"
       }) }}
                   
- 
-
-
-
-
 
   </div>
 </div>
