--- a/app/views/v13/_summary.html
+++ b/app/views/v13/_summary.html
@@ -118,7 +118,7 @@
             <thead class='govuk-table__head'>
               <!-- <tr class='govuk-table__row'>
                 <th scope='col' class='govuk-table__header'>Page</th>
-                <th scope='col' class='govuk-table__header'>What we've done this sprint</th>
+                <th scope='col' class='govuk-table__header'>What we've done</th>
               </tr>
             </thead>
             <tbody class='govuk-table__body'>
