--- a/app/views/v13/provider/account/application-employer-reviewed-no.html
+++ b/app/views/v13/provider/account/application-employer-reviewed-no.html
@@ -159,7 +159,7 @@ Manage apprentices
         text: "[reason given by employer]"
       }) }}
 
-      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+      <!-- <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible"> -->
     </section>
 
 <!-- RADIO BUTTONS     -->
@@ -167,9 +167,22 @@ Manage apprentices
      
       <form method="post" action="application-new">
    
+        <h1 class="govuk-heading-m">
+          Make applications unsuccessful
+        </h1>
 
+         <label class="govuk-label" for="contact-by-unsuccessful">
+                    <b>Feedback</b>
+                  </label>
+                  <div id="sign-in-hint" class="govuk-hint">
+                    Explain why the application has been unsuccessful, your comments will be sent to the applicant.
+                  </div>
+                  <textarea class="govuk-textarea govuk-js-character-count" id="word-count" name="contact-by-unsuccessful" rows="5" aria-describedby="word-count-info"></textarea>                
+                <div id="word-count-info" class="govuk-hint govuk-character-count__message">
+                  You can enter up to 200 words
+                </div>
 
-        <div class="govuk-form-group">
+        <!-- <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
@@ -230,7 +243,7 @@ Manage apprentices
 
             </div>
           </fieldset>
-        </div>
+        </div> -->
               
 <!-- BUTTONS -->
       <div class="govuk-button-group">
