updated sharing applications - ones can't share

--- a/app/views/v13/provider/view/0-dashboard.html
+++ b/app/views/v13/provider/view/0-dashboard.html
@@ -200,6 +200,21 @@ Recruitment - {{serviceName}} - GOV.UK
           </div>
         </div>
       </div>
+
+      <div class="govuk-grid-column-one-third">
+        <div class="das-card">
+          <div class="das-card--content">
+            <h3 class="govuk-heading-m das-card--heading">
+              <span class="das-card--stat">4</span>
+              <a class="card-link" href="6-employer-reviewed">
+                Employer reviewed applications
+              </a>
+            </h3>
+            <p class="govuk-body das-card--description">Vacancies with applications that have been reviewed by employers.</p>
+          </div>
+        </div>
+      </div>
+      
     </div>
 
     <a href="#" class="govuk-link govuk-!-font-size-24 govuk-!-font-weight-bold govuk-link--no-visited-state" name="button">View all your vacancies (56)</a>
